# cloudhacks2026

./: .gitignore  README.md
GitHubAgent/agentcore/: agentcore.json  aws-targets.json
GitHubAgent/agentcore/.cli/: deployed-state.json
GitHubAgent/app/GitHubAgent/: README.md  main.py  pyproject.toml
agents/: agent.py  requirements.txt
backend/: Dockerfile  main.py  requirements.txt
backend/agents/assessment_creator/: agent.py
backend/agents/assessment_creator/assessor/app/assessment_creator/: README.md  main.py  pyproject.toml
backend/agents/assessment_creator/assessor/app/assessment_creator/memory/: session.py
backend/agents/assessment_creator/assessor/app/assessment_creator/model/: load.py
backend/agents/code_explorer/: Dockerfile  agent.py  requirements.txt
backend/agents/code_explorer/coder/app/code_explorer/: README.md  main.py  pyproject.toml
backend/agents/code_explorer/coder/app/code_explorer/memory/: session.py
backend/agents/code_explorer/coder/app/code_explorer/model/: load.py
backend/agents/narrative_writer/: agent.py  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChapterCard.jsx  CheckpointModal.jsx  CodeViewer.jsx  FilterPills.jsx  Navbar.jsx  StoryCard.jsx
frontend/src/context/: JourneyContext.jsx
frontend/src/data/: chapters.js  journeys.js  stories.js
frontend/src/hooks/: useProgress.js
infrastructure/infrastructure/: infrastructure_stack.py
stitch-assets/: journey-map.html  library.html  story-view.html
(+17 files in other folders)
